rust/crates/cli/tests/snapshots/tui_pty__resize_shrunk_16x60.snap
---
source: crates/cli/tests/tui_pty.rs
expression: settled.stable_text()
---
[16x60 cursor=13,14]





╭────────────────────────────╮
│ >_ kloop  v0.0.0 (0000000) │
│ model   tui-pty-model      │
│ cwd     ~/workspace        │
│ mode    manual             │
╰────────────────────────────╯
────────────────────────────────────────────────────────────
› rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr
  rrrrrrrrrrrr
────────────────────────────────────────────────────────────
[manual]  shift+Tab to change mode · Ctrl+R to rewind · Ctr…
